window.scrollBy() scrolls incorrectly when zoomed in/out https://bugs.webkit.org/show_bug.cgi?id=45228

Patch by Eugene Girard <girard@chromium.org> on 2012-03-28
Reviewed by Simon Fraser.

scrollBy now uses layout (not CSS) units. (As scrollTo does.)

Source/WebCore:

Test: fast/dom/zoom-scroll-page-test.html

* page/DOMWindow.cpp:
(WebCore::DOMWindow::scrollBy):

LayoutTests:

* fast/dom/zoom-scroll-page-test-expected.txt: Added.
* fast/dom/zoom-scroll-page-test.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@112395 bbb929c8-8fbe-4397-9dbb-9b2b20218538